# nexus_core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  check_agents.py  check_agents_fixed.py  check_ci.py  check_ruff.py  cleanup_mig.py  db_check.py  debug_dns.js  debug_react.js  delete_telegram.py  docker-compose.yml  e2e_automation.py  e2e_carrier.py  e2e_cross_agent_auth.py  e2e_monitoring.py  e2e_notifications.py  e2e_pbx.py  e2e_setup_monitoring.py  e2e_setup_storage.py  e2e_storage.py  fix_db_urls.py  fix_mig.py  force_seed.py  get_annotations.py  inject_iredmail.py  inject_secrets.py  inventory.py  poll_ci.py  pyproject.toml  read_secrets_tmp.py  read_secrets_tmp_2.py  read_secrets_tmp_3.py  search_all.py  set_passwords.py  test_audit.py  (+15 more)
.agent/workflows/: destructive-operations.md
.github/workflows/: ci.yml
apps/agent_registry/: Dockerfile  (+8 more)
automations/: monitoring_sync_daily.json  system_status_check.json  system_status_daily_digest.json
backups/: recover.py  recover_legacy.py  recover_legacy_all.py  recover_local.py  search_backups.py
docs/: BACKLOG_V1_1.md  PILOT_PLAN_V1.md  SUCCESS_METRICS_V1.md  TRIAGE_RUNBOOK_V1.md  agent_ops_runbook.md
infra/: Caddyfile  Caddyfile.example
migrations/: env.py
scripts/: _create_persistent_record.py  _debug_mailbox.py  _deploy_mail_bridge.py  _fix_bridge_scripts.py  _iredmail_setup.py  _iredmail_setup.sh  _seed_email_secrets.py  _seed_smtp.py  bootstrap.py  deploy_automations.py  dns_smoke_test.py  email_smoke_test.py  eval_runner.py  fix_admin_vault_policy.py  fix_automation_vault_policy.py  fix_monitoring_auth.py  golden_set.yaml  ingest_repo_docs.py  sanity_check.py  seed_external_docs.py  seed_mock_storage.py  seed_monitoring_secret.py  seed_telegram_secrets.py  test_event_bus.py  verify_automations.py
tests/: test_rag_e2e.py
(+394 files in other folders)
