[project]
name = "nexus-core"
version = "0.1.0"
description = "Nexus Core V1 - Orchestrator and Persona Registry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",
    "pydantic[email]>=2.7.1",
    "pydantic-settings>=2.2.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.4",
    "boto3>=1.34.100",
    "boto3-stubs[s3]",
    "httpx>=0.27.0",
    "rq>=1.16.1",
    "structlog>=24.1.0",
    "fastembed>=0.2.7",
    "pypdf>=4.2.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.10",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    # Line-too-long: Long SQL strings and arg lists; not worth reformatting
    "E501",
    # B008: Do-not-call-Depends-in-default — this IS the canonical FastAPI DI pattern
    "B008",
    # B904: raise-without-from-inside-except — widespread legacy pattern, minimal risk
    "B904",
    # E402: Module import not at top — used in startup/lazy-load patterns on purpose
    "E402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
